Lo slider della home è poco intuitivo ("articolo non visibile in home page") https://github.com/TurboLabIt/TurboLab.it/issues/125 Closes #125

--- a/assets/styles/mosaic-and-slider.css
+++ b/assets/styles/mosaic-and-slider.css
@@ -52,9 +52,6 @@
     object-fit: cover !important;
 }
 
-.slick-arrow {
-    padding: 0px;
+.trending-news-item {
+    margin-bottom: 20px;
 }
-
-.trending-news-slider .slick-list { margin: 0 -10px; }
-.trending-news-slider .slick-slide { margin: 0 10px; }
