--- a/assets/styles/newspark/style.css
+++ b/assets/styles/newspark/style.css
@@ -1542,31 +1542,6 @@ p {
           .single-play-post-area .single-play-box {
             padding: 0;
             margin: 0 0; } }
-      .single-play-post-area .single-play-post-slider .slick-arrow {
-        position: absolute;
-        top: 50%;
-        height: 70px;
-        width: 30px;
-        background: #fff;
-        text-align: center;
-        font-size: 20px;
-        line-height: 70px;
-        box-shadow: -16px 8px 17px rgba(0, 0, 0, 0.1);
-        cursor: pointer;
-        z-index: 9;
-        -webkit-transition: all 0.3s ease-out 0s;
-        -moz-transition: all 0.3s ease-out 0s;
-        -ms-transition: all 0.3s ease-out 0s;
-        -o-transition: all 0.3s ease-out 0s;
-        transition: all 0.3s ease-out 0s;
-        transform: translateY(-50%); }
-        .single-play-post-area .single-play-post-slider .slick-arrow:hover {
-          background: #1091FF;
-          color: #fff; }
-        .single-play-post-area .single-play-post-slider .slick-arrow.prev {
-          left: 15px; }
-        .single-play-post-area .single-play-post-slider .slick-arrow.next {
-          right: 15px; }
       .single-play-post-area.single-play-post-dark-area .single-play-box {
         background: #17222B; }
 
@@ -1790,22 +1765,6 @@ p {
       line-height: 30px;
       font-weight: 500; }
 
-.trending-news-slider .slick-arrow {
-  position: absolute;
-  top: -55px;
-  z-index: 9;
-  cursor: pointer;
-  height: 30px;
-  width: 30px;
-  text-align: center;
-  line-height: 27px;
-  border: 2px solid #C1C4C6;
-  font-size: 20px;
-  color: #C1C4C6; }
-  .trending-news-slider .slick-arrow.prev {
-    right: 45px; }
-  .trending-news-slider .slick-arrow.next {
-    right: 0; }
 
 .trending-social ul {
   margin: 0;
